--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # requirements.txt
 
 asgiref==3.8.1
+backports.zoneinfo==0.2.1
 certifi==2024.7.4
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -13,9 +14,11 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 djoser==2.2.3
 idna==3.7
+mysqlclient==2.2.4
 oauthlib==3.2.2
 pycparser==2.22
 PyJWT==2.8.0
+python-dotenv==1.0.1
 python3-openid==3.2.0
 requests==2.32.3
 requests-oauthlib==2.0.0
