--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ DATABASE_USER=your_mysql_username
 DATABASE_PASSWORD=your_mysql_password
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
+
+ALLOWED_HOSTS='localhost'
+CORS_ALLOWED_ORIGINS='http://localhost:9000'
