--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer==3.3.2
 cryptography==43.0.0
 defusedxml==0.8.0rc2
 Django==4.2.14
+django-cors-headers==4.4.0
 django-extensions==3.2.3
 django-templated-mail==1.1.1
 djangorestframework==3.15.2
@@ -28,3 +29,4 @@ sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
+whitenoise==6.7.0
